# rt

./: .gitignore  CMakeLists.txt  README.md
doc/: features.md
src/: camera.cpp  camera.h  color.h  dielectric.cpp  dielectric.h  diffuse_light.cpp  diffuse_light.h  hittable.h  hittable_list.cpp  hittable_list.h  image.cpp  image.h  lambertian.cpp  lambertian.h  main.cpp  material.h  math_utils.h  metal.cpp  metal.h  random.h  ray.cpp  ray.h  rt.h  sphere.cpp  sphere.h  vec3.cpp  vec3.h  vec3_utils.h
src/texture/: checker.cpp  checker.h  image_texture.cpp  image_texture.h  modifiers.h  solid_color.cpp  solid_color.h  texture.h
